# mix

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  FFMPEG_VS_GUI_VIDEO_EDITOR_DECISION_GUIDE.md  LICENSE.md  Makefile  PHASE_1_UI_STATE_CONSOLIDATION.md  POSTHOG_DASHBOARD_GUIDE.md  Procfile  README.md  RELEASE.md  TERMS_AND_PRIVACY.md  netlify.toml  openai_auth.md  package-lock.json  package.json  vercel.json
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
docs/: README.md  REMOTION_INTEGRATION.md  package.json  posthog_integration.md  source.config.ts
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/components/: announcement.tsx  page-header.tsx
docs/lib/: config.ts  source.ts
go_backend/: .air.toml  .gitignore  .mix.json  README.md  go.mod  go.sum  mix-schema.json
go_backend/cmd/: auth.go  root.go
go_backend/reference/: FFMPEG_VS_GUI_VIDEO_EDITOR_DECISION_GUIDE.md  fumadocs_comprehensive_guide.md
go_backend/scripts/: setup_remotion_project.sh
scripts/: convert_tools_docs.py  load_env.sh
tauri_app/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri_app/references/: tanstack_pacer.md
tauri_app/src/: App.tsx  main.tsx  routeTree.gen.ts  vite-console-forward-plugin.ts
tauri_app/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json  desktop.json
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/src/: lib.rs  sidecar.rs
(+232 files in other folders)
