[package]
name = "mix_tauri_app"
version = "0.1.0"
description = "Mix - AI-Powered Content Generation and Management"
authors = ["Mix Team"]
license = "MIT"
repository = "https://github.com/recreate-run/mix"
homepage = "https://mix.app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mix_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
block2 = "0.6.1"
tauri-plugin-fs = "2"
tauri-plugin-macos-permissions = "2.3.0"
window-vibrancy = "0.6.0"
dotenv = "0.15"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-foundation = "0.3.1"
base64 = "0.21"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

